--- a/index.html
+++ b/index.html
@@ -4,9 +4,77 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>Minha página</title>
 </head>
 <body>
-    
+    <nav class="navbar navbar-expand-lg navbar-light margin">
+        <a class="navbar-brand" href="#">
+            <img src="img/global_labs.png" alt="logo global labs">
+        </a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#quemsomos">Quem somos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#parceiros">Parceiros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#servicos">Serviços</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <section id="quemsomos">
+        <div class="container-fluid quem-somos text-center margin">
+            <h3 class="margin">QUEM SOMOS</h3>
+            <img src="img/pexels-tranmautritam.jpg" class="rounded-circle" alt="code image" width="400" height="400">
+            <h3>Somos um time comprometido com resultados</h3>
+        </div>
+    </section>
+
+    <section id="parceiros">
+        <div class="container-fluid text-center margin parceiros">
+            <h3 class="margin">PARCEIROS</h3>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <img src="img/impulso.svg" alt="impulso logo" width="50%">
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="img/avanade.svg" alt="avanade logo" width="50%">
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="img/carrefour-banco.svg" alt="carrefour-banco logo" width="50%">
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <section id="servicos">
+        <div class="container-fluid text-center margin servicos">
+            <h3 class="margin">SERVIÇOS</h3>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique debitis et, in iure placeat alias consequuntur itaque tempora fugit mollitia officia dignissimos pariatur veniam praesentium? Fuga odio cumque pariatur magni.</p>
+                        <img src="img/pexels-pixabay.jpg" width="100%">
+                    </div>
+                    <div class="col-lg-6">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda ex ipsam similique perferendis, quam nam quae natus numquam illo minus dignissimos vel ut doloremque, quaerat quo id earum. Modi, voluptates.</p>
+                        <img src="img/pexels-tranmautritam.jpg" width="100%" height="63%">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="container-fluid text-center bg-footer margin">
+        <p>Desenvolvido por Yuri Melo</p>
+    </footer>
 </body>
 </html>
